# napari-console

./: .gitignore  LICENSE  README.md  codecov.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
docs/: conf.py  index.rst
napari_console/: __init__.py  _hookimpl.py  conftest.py  napari.yaml  qt_console.py
napari_console/_tests/: test_console.py  test_qt_console.py
