[metadata]
name = napari-console
url = https://github.com/napari/napari-console
license = BSD 3-Clause
license_file = LICENSE
description = A plugin that adds a console to napari
long_description = file: README.md
long_description_content_type = text/markdown
author = Nicholas Sofroniew
author_email = sofroniewn@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    ipykernel>=5.2.0
    IPython>=7.7.0
    napari-plugin-engine>=0.1.9
    qtconsole>=4.5.1,!=4.7.6
    qtpy>=1.7.0

[options.package_data]
* = *.pyi
napari_builtins =
    builtins.yaml

# for explanation of %(extra)s syntax see:
# https://github.com/pypa/setuptools/issues/1260#issuecomment-438187625
# this syntax may change in the future

[options.entry_points]
napari.plugin =
   console = napari_console 
