[metadata]
name = napari_console
description = A plugin that adds a console to napari
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/napari/napari-console
author = Nicholas Sofroniew
author_email = sofroniewn@gmail.com
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Testing

[options]
packages = find:
install_requires =
    IPython>=7.7.0
    ipykernel>=5.2.0
    napari-plugin-engine>=0.1.9
    qtconsole!=4.7.6,!=5.4.2,>=4.5.1
    qtpy>=1.7.0
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.entry_points]
napari.manifest =
    napari-console = napari_console:napari.yaml

[options.package_data]
napari_console = napari.yaml
